# OpenBallot

./: .env.example  .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  RELEASE_NOTES.md  STRUCTURE.md
.github/workflows/: ci.yml  deploy.yml
Polling-Units/: .gitignore  scraper.js
Polling-Units/results/: README.md  lagos.json  probe.json
data/ward_boundaries/: load_report.csv  overrides.csv
db/migrations/: 0006_tile_functions.sql  0007_agent_auth.sql  0008_anomaly_detection.sql  0009_async_processing.sql  0011_state_boundaries.sql  0012_ward_boundaries.sql  0013_region_aggregates.sql  0014_ward_polygons_api.sql
db/seed/: 01_geo_seed.sql  02_state_polygons.sql
docs/: DEPLOYMENT_GUIDE.md  DEPLOYMENT_INFO.md  GEO_DATA_LOAD_RUNBOOK.md  IREV_SCRAPE_RUNBOOK.md  JOURNALIST_QUICKSTART.md  MAP_BOUNDARIES.md  ROADMAP.md  THREAT_MODEL.md  WARD_BOUNDARIES.md
docs/adr/: 0001-form-ec8a-canonical-evidence.md  0002-multi-source-consensus.md  0003-sql-trigger-audit-chain.md  0004-ethereum-mainnet-anchor.md  0005-async-ingestion-queue.md  0006-presigned-direct-uploads.md  0007-document-ai-primary-gpt4o-fallback.md  0008-three-layer-anomaly-detection.md  0009-agpl-licence.md  0010-device-binding.md  0011-inec-delim-derived-codes.md  0012-grid3-ward-reconciliation.md  README.md  (+2 more)
infra/: docker-compose.prod.yml  docker-compose.yml
scripts/: build_nigeria_topojson.sh  e2e-test.sh  fetch_ward_boundaries.sh  load_polling_units.py  load_state_polygons.py  load_ward_boundaries.py  reconcile_ward_names.py
web/: next.config.mjs  package.json  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
worker/: pyproject.toml
worker/app/: config.py  main.py
worker/app/anomaly/: __init__.py  engine.py  historical.py  sanity.py  statistical.py  types.py
worker/app/auth/: __init__.py  device.py  jwt_tokens.py  otp.py  phone.py  rate_limit.py  router.py  twilio_adapter.py
worker/app/jobs/: __init__.py  ingest.py  publisher.py  queue.py  recovery.py
worker/app/uploads/: router.py
worker/cli/: anchor.py  anomaly_sweep.py  migrate.py  recovery.py  run_worker.py
worker/tests/: test_anomaly_historical.py  test_anomaly_sanity.py  test_anomaly_statistical.py  test_auth_helpers.py  test_jobs_ingest.py  test_jobs_queue.py  test_jwt.py  test_otp.py  test_recovery.py  test_ward_reconciliation.py
(+74 files in other folders)
