[project]
name = "openballot-worker"
version = "0.1.0"
description = "OpenBallot Nigeria - ingestion, extraction, verification and audit worker"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "asyncpg>=0.29",
  "redis>=5.0",
  "rq>=1.16",
  "pillow>=10.2",
  "piexif>=1.1.3",
  "python-multipart>=0.0.9",
  "structlog>=24.1",
  "tenacity>=8.2",
  "geopy>=2.4",
  "web3>=6.15",
  "PyJWT>=2.8",
  "phonenumbers>=8.13"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.3",
  "mypy>=1.9",
  "httpx>=0.27"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
