[project]
name = "openballot-worker"
version = "0.1.0"
description = "OpenBallot Nigeria - ingestion, extraction, verification and audit worker"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic[email]>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "asyncpg>=0.29",
  "redis>=5.0",
  "rq>=1.16",
  "pillow>=10.2",
  "piexif>=1.1.3",
  "python-multipart>=0.0.9",
  "structlog>=24.1",
  "tenacity>=8.2",
  "geopy>=2.4",
  "web3>=6.15",
  "PyJWT>=2.8",
  "phonenumbers>=8.13",
  "google-cloud-documentai>=2.24",
  "openai>=1.30",
  "eth-account>=0.11",
  "sentry-sdk[fastapi]>=2.0",
  "prometheus-client>=0.20",
  "boto3>=1.34"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.3",
  "mypy>=1.9",
  "httpx>=0.27"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Two top-level packages: `app` for the FastAPI service modules and
# `cli` for the worker entry points (cli.run_worker, cli.recovery,
# cli.migrate). setuptools' auto-discovery refuses to pick when more
# than one top-level package exists, so we declare them explicitly.
[tool.setuptools.packages.find]
include = ["app*", "cli*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
